--- a/public/index.html
+++ b/public/index.html
@@ -15,29 +15,88 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <link href="%PUBLIC_URL%/assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/assets/css/jquery-ui.css" rel="stylesheet" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <link href="%PUBLIC_URL%/assets/css/bootstrap-icons.css" rel="stylesheet" />
+
+    <link href="%PUBLIC_URL%/assets/css/all.min.css" rel="stylesheet" />
+
+    <link href="%PUBLIC_URL%/assets/css/animate.min.css" rel="stylesheet" />
+
+    <link
+      href="%PUBLIC_URL%/assets/css/jquery.fancybox.min.css"
+      rel="stylesheet"
+    />
+
+    <link href="%PUBLIC_URL%/assets/css/fontawesome.min.css" rel="stylesheet" />
+
+    <link
+      rel="stylesheet"
+      href="%PUBLIC_URL%/assets/css/swiper-bundle.min.css"
+    />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/daterangepicker.css" />
+
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/slick.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/slick-theme.css" />
+
+    <link href="%PUBLIC_URL%/assets/css/boxicons.min.css" rel="stylesheet" />
+
+    <link href="%PUBLIC_URL%/assets/css/select2.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/assets/css/nice-select.css" rel="stylesheet" />
+
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" />
+
+    <title>KKUN Booking - Travel Agency</title>
+    <link
+      rel="icon"
+      href="%PUBLIC_URL%/assets/img/sm-logo.svg"
+      type="image/gif"
+      sizes="20x20"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <script
+      data-cfasync="false"
+      src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
+    ></script>
+    <script src="%PUBLIC_URL%/assets/js/jquery-3.7.1.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/jquery-ui.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/moment.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/daterangepicker.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/bootstrap.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/popper.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/swiper-bundle.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/slick.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/waypoints.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/jquery.counterup.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/isotope.pkgd.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/jquery.marquee.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/jquery.nice-select.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/select2.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/jquery.fancybox.min.js"></script>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script src="%PUBLIC_URL%/assets/js/custom.js"></script>
+    <script>
+      $('.marquee_text').marquee({
+        direction: 'left',
+        duration: 25000,
+        gap: 50,
+        delayBeforeStart: 0,
+        duplicated: true,
+        startVisible: true,
+      })
+      $('.marquee_text2').marquee({
+        direction: 'left',
+        duration: 25000,
+        gap: 50,
+        delayBeforeStart: 0,
+        duplicated: true,
+        startVisible: true,
+      })
+    </script>
   </body>
 </html>
