--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
     <link href="%PUBLIC_URL%/assets/css/all.min.css" rel="stylesheet" />
 
     <link href="%PUBLIC_URL%/assets/css/animate.min.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/assets/css/dashboard.css" rel="stylesheet" />
+
 
     <link
       href="%PUBLIC_URL%/assets/css/jquery.fancybox.min.css"
